# vu-ml

./: .gitignore  README.md  application-guide.tex  cond-ent.tex  lec0-prob.tex  lec2.tex  lec4.tex  lec4.toc  lec6.tex  pagestyle.sty  pyproject.toml  vae-train.tex
template/: main.tex  pagestyle.sty
worksheets/: Worksheet 1, Numpy and Matplotlib.ipynb  Worksheet 2, Sklearn.ipynb  Worksheet 3, Pandas.ipynb  Worksheet 4, Keras.ipynb  Worksheet 5, Pytorch.ipynb  decision-trees.ipynb  table.csv  table2.csv  table3.csv
